[package]
name = "goals"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rusqlite = { version = "0.28.0", features = ["bundled"] }
colored = "2.0.0"
chrono = "0.4.23"
rusty-hook = "0.11.2"
clap = { version = "4.1.8", features = ["derive"] }
human-panic = "1.1.3"
inquire = "0.6.0"

[registries.creates-io]
protocol = "sparse" # New on rust 1.68.0
